Entities and DTOs were fixed, DB was changed