@@ -2,8 +2,10 @@ package co.com.chartsofka.music.utils;
 
 import co.com.chartsofka.music.dto.AlbumDTO;
 import co.com.chartsofka.music.dto.ArtistDTO;
+import co.com.chartsofka.music.dto.SongDTO;
 import co.com.chartsofka.music.entity.Album;
 import co.com.chartsofka.music.entity.Artist;
+import co.com.chartsofka.music.entity.Song;
 
 import java.util.stream.Collectors;
 
@@ -16,6 +18,12 @@ public class DTOToEntity {
         r.setYearRelease(albumDTO.getYearRelease());
         r.setGenre(albumDTO.getGenre());
         r.setArtist(artist(albumDTO.getArtistDTO()));
+        r.setSongs(albumDTO
+                .getSongsDTO()
+                .stream()
+                .map(DTOToEntity::song)
+                .collect(Collectors
+                        .toList()));
 
         return r;
     }
@@ -28,7 +36,23 @@ public class DTOToEntity {
         r.setDebutDate(artistDTO.getDebutDate());
         r.setEnterprise(artistDTO.getEnterprise());
         r.setType(artistDTO.getType());
-        r.setAlbums(artistDTO.getAlbumsDTO().stream().map(DTOToEntity::album).collect(Collectors.toList()));
+        r.setAlbums(artistDTO
+                .getAlbumsDTO()
+                .stream()
+                .map(DTOToEntity::album)
+                .collect(Collectors
+                        .toList()));
+        return r;
+    }
+
+    public static Song song(SongDTO songDTO) {
+        Song r = new Song();
+
+        r.setSongID(songDTO.getSongID());
+        r.setName(songDTO.getName());
+        r.setDuration(songDTO.getDuration());
+        r.setAlbum(album(songDTO.getAlbumDTO()));
+        r.setPlayed(songDTO.getPlayed());
         return r;
     }
 }
